--- a/views/_header.pug
+++ b/views/_header.pug
@@ -60,5 +60,5 @@ nav.navbar-top.navbar.navbar-expand-lg.navbar-light.py-2.bg-white.fixed-top.bord
                     path(fill-rule='evenodd' d='M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z')
                   span.ms-2 &Dstrok;&abreve;ng xu&#x1EA5;t
       else
-        a.navbar-btn.btn.btn-sm.btn-danger.ms-auto(href='/vi/user/login') &Dstrok;&abreve;ng nh&#x1EAD;p
+        a.navbar-btn.btn.btn-sm.btn-danger.ms-auto(href='/user/signin') &Dstrok;&abreve;ng nh&#x1EAD;p
 
