--- a/views/overview.pug
+++ b/views/overview.pug
@@ -23,7 +23,7 @@ if(weddings)
         .nd_options_grid_12.nd_options_display_none_all_responsive
           .nd_options_section(style='height: 4px;')
           // LOGO
-          img.nd_options_position_absolute.nd_options_left_15(style='top:17px;' alt='' width='246' src='http://www.nicdarkthemes.com/themes/wedding/wp/demo/wedding-planner/wp-content/uploads/sites/2/2016/10/logo-white.png')
+          img.nd_options_position_absolute.nd_options_left_15(style='top:17px;' alt='' width='246' src='/img/logo-white.png')
           .nd_options_navigation_2.nd_options_navigation_type.nd_options_text_align_right.nd_options_float_right.nd_options_display_none_all_responsive
             .nd_options_display_table
               .nd_options_display_table_cell.nd_options_vertical_align_middle
@@ -119,14 +119,14 @@ if(weddings)
               .row.couple-wrap
                 .groom-wrap.col-md-6.clearfix
                   .groom
-                    img.img-responsive(src='https://cdn.biihappy.com/ziiweb/default/website/3b48bc6125ce6d186297a3e90a11085e.jpeg' alt='groom')
+                    img.img-responsive(src=`/img/wedding/${weddings.malephoto}` alt='groom')
                   .desc-groom
                     h3=`${weddings.malename}`
                     // <h4>12/09/1992</h4>
                     p=`${weddings.maleintroduce}`
                 .bride-wrap.col-md-6
                   .bride
-                    img.img-responsive(src='https://cdn.biihappy.com/ziiweb/default/website/59b631f29bfb9f7cd20437d27ddbe4db.jpeg' alt='groom')
+                    img.img-responsive(src=`/img/wedding/${weddings.fephoto}` alt='groom')
                   .desc-bride
                     h3=`${weddings.fename}`
                     // <h4>10/02/1993</h4>
