--- a/views/bride-groom.pug
+++ b/views/bride-groom.pug
@@ -84,7 +84,7 @@ block content
                   img#show_image_bride.w-100.img-thumbnail.rounded-0(src=`/img/wedding/${weddings.fephoto}`)
                 .col-12.col-md-auto
                   //- button.btn.btn-xs.w-100.btn-secondary.mt-5.mt-md-0.position-relative
-                  input.form__upload(type='file' accept='image/*' id ='fephoto' name='fephoto')
+                  input.form__upload(type='file' accept='image/*' id ='fephoto' name='fephoto' value=`/img/wedding/${weddings.malephoto}`)
                   label(for='fephoto') 
                 .field-websiteinformationbrideinfoform-avatar_base64
                   input#websiteinformationbrideinfoform-avatar_base64.form-control(type='hidden' name='WebsiteInformationBrideInfoForm[avatar_base64]')
