--- a/views/editwedsite.pug
+++ b/views/editwedsite.pug
@@ -189,6 +189,6 @@ body.flex-colum.h-100(style='padding-top:65px!important')
     script(src='/assets/705bcf32/yii.captcha.js')
     script(src='/js/scripts.js')
     script(src='/js/bundle.js')
-    script(src='/js/index.js')
+    script(dist='/js/index.js' type='module')
 
 
