--- a/views/event.pug
+++ b/views/event.pug
@@ -17,52 +17,58 @@ block content
     if(events)
             input(type='hidden' name='_csrf-biihappy' value='Bnut6XhAaAad9tgIprrNXYOqO9FYEOrwhrdd--ZvnE0rGOm_EQcrPqjD71Dj970Q6e5hhw100par-hizqSrXNw==')
             .eventsContainer.row.mt-6
-                each event in events
+                each event,i in events
                     .row-event.col-sm-6.col-md-4.col-lg-3
                         .card.card-border.border-dark.shadow-lg.card-border-radius-none.mb-7
                         form#events-form.form-event-user(data-event-id=`${event.id}`)
                             .card-body
                                 a.thumbnail.d-block.mb-3.choose-image-parent.position-relative(href='javascript:void(0)')
-                                    .choose-image-overlay.d-flex.justify-content-center.align-items-center.position-absolute.top-0.start-0.w-100.h-100
-                                        button.btn.btn-primary.btn-xs.position-relative(type='button')
-                                            | Thay &dstrok;&#x1ED5;i
-                                        input#upload_image_event_index_1.upload_image_event.file-field-absolute(type='file' data-index='index_1' name='upload_image_event_index_1')
-                                    img#show_image_event_index_1.img-thumbnail.w-100.img-photo.rounded-0(src='https://cdn.biihappy.com/ziiweb/default/website/7744fc9739685fe61c53cd8fe2cf7e52.png')
-                                .field-event_name_index_1.required
-                                    .form-floating.mb-2
-                                        input#name.form-control(type='text' name='name' value=`${event.name}` placeholder='Tên sự kiện')
-                                        label.control-label(for='name') T&ecirc;n s&#x1EF1; ki&#x1EC7;n
+                                    //- .choose-image-overlay.d-flex.justify-content-center.align-items-center.position-absolute.top-0.start-0.w-100.h-100
+                                    //-     button.btn.btn-primary.btn-xs.position-relative(type='button')
+                                    //-         | Thay &dstrok;&#x1ED5;i
+                                    //-     input#upload_image_event_index_1.upload_image_event.file-field-absolute(type='file' data-index='index_1' name='upload_image_event_index_1')
+                                    //- img#show_image_event_index_1.img-thumbnail.w-100.img-photo.rounded-0(src='https://cdn.biihappy.com/ziiweb/default/website/7744fc9739685fe61c53cd8fe2cf7e52.png')
+                                .field-event_name.required
+                                    .field-event-id.required
+                                        input.form-control(type='hidden' name='id' id=`id${i+1}` value=`${i+1}`)
                                         .help-block
-                                .field-event_hour_index_1.required
                                     .form-floating.mb-2
-                                        input#time.form-control(type='text' name='time' value=`${event.time}` placeholder='Giờ')
-                                        label.control-label(for='time') Gi&#x1EDD;
-                                        .help-block
-                                .field-event_date_index_1.required
+                                        input.form-control(type='text' name=`name${i+1}` id=`name${i+1}` value=`${event.name}` placeholder='Tên sự kiện')
+                                        label.control-label(for=`name${i+1}`) T&ecirc;n s&#x1EF1; ki&#x1EC7;n
+                                .field-event_hour.required
                                     .form-floating.mb-2
-                                        input#date.form-control(type='text' name='date' value=`${event.date}` placeholder='Ngày')
-                                        label.control-label(for='date') Ng&agrave;y
+                                        input.form-control(type='text' name=`time${i+1}` id=`time${i+1}` value=`${event.time}` placeholder='Giờ')
+                                        label.control-label(for=`time${i+1}`) Gi&#x1EDD;
                                         .help-block
-                                .field-event_address_index_1.required
+                                .field-event_date.required
                                     .form-floating.mb-2
-                                        input#address.form-control(type='text' name='address' value=`${event.address}` placeholder='Địa chỉ')
-                                        label.control-label(for='address') &Dstrok;&#x1ECB;a ch&#x1EC9;
+                                        input.form-control(type='text' name='date' id=`date${i+1}` value=`${event.date}` placeholder='Ngày')
+                                        label.control-label(for=`date${i+1}`) Ng&agrave;y
                                         .help-block
-                                .field-event_map_url_index_1
+                                .field-event_address.required
                                     .form-floating.mb-2
-                                        input#event_map_url_index_1.form-control(type='text' name='map' value=`${event.map}` placeholder='Liên kết bản đồ')
-                                        label.control-label(for='map') Li&ecirc;n k&#x1EBF;t b&#x1EA3;n &dstrok;&#x1ED3;
+                                        input.form-control(type='text' name='address' id=`address${i+1}` value=`${event.address}` placeholder='Địa chỉ')
+                                        label.control-label(for=`address${i+1}`) &Dstrok;&#x1ECB;a ch&#x1EC9;
                                         .help-block
-                                button.btn.btn-danger.me-7.btn--save(type='submit' data-event-id=`${event.id}` style='margin-right:25px,height:55px' )
+                                .field-event_map_url
+                                    .form-floating.mb-2
+                                        input.form-control(type='text' name='map' id=`map${i+1}` value=`${event.map}` placeholder='Liên kết bản đồ')
+                                        label.control-label(for=`map${i+1}`) Li&ecirc;n k&#x1EBF;t b&#x1EA3;n &dstrok;&#x1ED3;
+                                        .help-block
+                                    .form-floating.mb-2
+                                        input.form-control(type='hidden' id=`eventId${i+1}` name=`eventId${i+1}` value=`${event.id}`)
+
+                                        //- label.control-label(for='eventId') eventId
+                                button#event-ID.btn.btn-danger.me-7.btn--save(type='submit' data-event-id=`${event.id}` style='margin-right:25px,height:55px' )
                                     svg.bi.bi-save(xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' viewbox='0 0 16 16')
                                         path(d='M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z')
-                                    | &#x9;&#x9;L&#x1B0;u 
-                                button.btn.btn-danger-soft.btn-sm.btn-remove-form(type='button' style='height:55px') Xo&aacute;
-            .p-5.text-center.bg-gray-200
-                button.btn.btn-secondary.button-add-more-event(type='button')
-                    svg.bi.bi-plus(xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' viewbox='0 0 16 16')
-                        path(d='M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z')
-                    | &#x9;&#x9;Th&ecirc;m s&#x1EF1; ki&#x1EC7;n
-
-
-
+                                    | &#x9;&#x9;L&#x1B0;u
+                                button.btn.btn-link.btn-delete-event(data-id=`${event.id}`) X&oacute;a
+                                //- button.btn.btn-danger-soft.btn-sm#btn-remove-form(style='height:55px' data-id=`${event.id}`) Xo&aacute;
+            each event,i in events
+                if(i<1)
+                    .p-5.text-center.bg-gray-200
+                        button.btn.btn--primary.btn-secondary.button-add-more-event#add-more-event(data-event=`${event.wedding}`)
+                            svg.bi.bi-plus(xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' viewbox='0 0 16 16')
+                                path(d='M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z')
+                            | &#x9;&#x9;Th&ecirc;m s&#x1EF1; ki&#x1EC7;n
