--- a/views/base.pug
+++ b/views/base.pug
@@ -3,7 +3,8 @@ head
     meta(charset='UTF-8')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     meta(name='viewport' content='width=device-width, initial-scale=1')
-    //- meta(http-equiv="Content-Security-Policy" content="upgrade-insecure-requests") 
+    //- meta(http-equiv="Content-Security-Policy" content="upgrade-insecure-requests")
+    //- meta(http-equiv="Content-Security-Policy" content="connect-src 'ws://localhost:8080';")
     title #{title}
     link(rel='icon' type='image/png' href='/favicon/favicon.png')
     link(rel='preconnect' href='https://fonts.googleapis.com/')
@@ -46,10 +47,8 @@ body.flex-colum.h-100(style='padding-top:65px!important')
     //-footer
     include _footer
     //- script(src='/js/mapbox.js')
-    script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript")
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript")
     script(src='/libs/jquery.min3c8e.js')
-    //- script(src='https://js.stripe.com/v3/')
-    //- script(src='https://unpkg.com/axios/dist/axios.min.js')
     script(src='https://biihappy.com/static/libs/jquery.min.js?v=20210925')
     script(src='/js/preview.js')
     script(src='/js/theme.bundlef9f5.js')
