--- a/public/css/style.css
+++ b/public/css/style.css
@@ -892,7 +892,7 @@ img {
 	}
 
 	#znid-584505610725[data-effect="overlay"]>.zn-element>.zn-banner {
-		background: linear-gradient(#FFFFFFC0, #FFFFFFC0), url(https://cdn.biihappy.com/ziiweb/default/template/6174ee7a7a1c7661fb0a671c/5d32ff474e21a19e20fc2ee0298a1b39.jpg);
+		background: linear-gradient(#FFFFFFC0, #FFFFFFC0), url(https://wonderfulengineering.com/wp-content/uploads/2014/05/twitter-header-4.jpg);
 		background-size: cover;
 		background-position: center center;
 	}
@@ -902,7 +902,7 @@ img {
 	}
 
 	#znid-584505610725[data-effect="none"]>.zn-element>.zn-banner {
-		background-image: url(https://cdn.biihappy.com/ziiweb/default/template/6174ee7a7a1c7661fb0a671c/5d32ff474e21a19e20fc2ee0298a1b39.jpg);
+		background-image: url(https://wonderfulengineering.com/wp-content/uploads/2014/05/twitter-header-4.jpg);
 		background-attachment: initial;
 	}
 
