--- a/views/base.pug
+++ b/views/base.pug
@@ -35,7 +35,7 @@ head
     link(href='wedding.html' rel='canonical')
     script(async='' src='https://www.googletagmanager.com/gtag/js?id=G-P4QBSSV7TG')
     script(src='https://unpkg.com/axios/dist/axios.min.js')
-
+    script(src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous")
 
 body.flex-colum.h-100(style='padding-top:65px!important')
     //-header
